--- a/.gitignore
+++ b/.gitignore
@@ -82,4 +82,6 @@ GitHub.sublime-settings
 # Ignore all local history of files
 .history
 
+.DS_Store
+
 # End of https://www.gitignore.io/api/c++,notepadpp,sublimetext,visualstudiocode
